--- a/app/src/main/res/layout/activity_viewpager_refresh.xml
+++ b/app/src/main/res/layout/activity_viewpager_refresh.xml
@@ -27,8 +27,15 @@
         android:minHeight="?attr/actionBarSize"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-       />
-
+       >
+        <TextView
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="动作栏"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"/>
+        </android.support.v7.widget.Toolbar>
 
 
     <FrameLayout
